# OpenEnv

./: .dockerignore  Dockerfile  EXAMPLES.md  GRADERS.md  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
app/: environment.py  main.py  models.py  tasks.py
customer_support_ticket_resolution.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_environment.py
